--- a/S3_Data_viewer.ipynb
+++ b/S3_Data_viewer.ipynb
@@ -25,16 +25,7 @@
    "execution_count": null,
    "id": "74b034c3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Credentials loaded: P0F9SE...\n",
-      "✅ Found 4 buckets: ['bozkurt-abd03e71', 'tcn-livex-test', 'tensorstore-test', 'xray-data']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Cell 1: Backend initialization \n",
     "import os, json\n",
@@ -107,18 +98,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9e99ba3b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Core functions loaded\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Cell 2: Core logic functions (no UI)\n",
     "import pandas as pd\n",
@@ -273,18 +256,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "57a8db06",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Visualization functions loaded\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Cell 3: Visualization functions (updated - last frame only, 2000x2000)\n",
     "import matplotlib.pyplot as plt\n",
@@ -307,7 +282,7 @@
     "        return []\n",
     "    return [(obj['Key'], idx) for idx, obj in enumerate(objects_cache) if obj['Key'].endswith('.h5')]\n",
     "\n",
-    "def visualize_h5_from_s3(bucket, file_key, dataset_name='narrowfov'):\n",
+    "def visualize_h5_from_s3(bucket, file_key, dataset_name=None):\n",
     "    \"\"\"Visualize last frame of h5 file directly from S3 (2000x2000 display)\"\"\"\n",
     "    \n",
     "    plt.close('all')\n",
@@ -322,8 +297,14 @@
     "    \n",
     "    with s3fs_client.open(s3_path, 'rb') as f:\n",
     "        with h5py.File(f, 'r') as hf:\n",
-    "            if dataset_name not in hf:\n",
-    "                available = list(hf.keys())\n",
+    "            available = list(hf.keys())\n",
+    "            \n",
+    "            if dataset_name is None or dataset_name == '':\n",
+    "                if not available:\n",
+    "                    raise KeyError(\"No datasets found in h5 file\")\n",
+    "                dataset_name = available[0]\n",
+    "                print(f\"Auto-selected dataset: {dataset_name}\")\n",
+    "            elif dataset_name not in hf:\n",
     "                raise KeyError(f\"Dataset '{dataset_name}' not found. Available: {available}\")\n",
     "            \n",
     "            dataset = hf[dataset_name]\n",
@@ -398,102 +379,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "0277ddff",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== S3 Object Browser & Visualization ===\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7dbecdaa652a4525bec5ce6236848fa4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Dropdown(description='Bucket:', options=('bozkurt-abd03e71', 'tcn-livex-test', 'tensorstore-tes…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1a6daa7f59e4028a88668cc3846cb85",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Dropdown(description='Directory:', options=('(All)',), value='(All)'), Text(value='', descripti…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e34ef2dd84d4cbc8418a19d73bc7ef3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "SelectMultiple(description='Objects', layout=Layout(width='100%'), options=(), rows=20, value=())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "944d344643984e2b8a5e154ce9bb777b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Text(value='./downloads', description='Local Dir:', layout=Layout(width='25%')), Button(button_…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0f9fb278068e4d039cc4239713eb985f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(border_bottom='1px solid gray', border_left='1px solid gray', border_right='1px solid gra…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e9fea2d345d412cae0790ce64d41a82",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Cell 4: Complete UI (update button text)\n",
     "import ipywidgets as widgets\n",
@@ -543,7 +432,7 @@
     "# Action controls\n",
     "dest_text = widgets.Text(value='./downloads', description='Local Dir:', layout=widgets.Layout(width='25%'))\n",
     "download_btn = widgets.Button(description='Download Selected', button_style='success')\n",
-    "dataset_text = widgets.Text(value='narrowfov', description='Dataset:', placeholder='e.g. narrowfov', layout=widgets.Layout(width='25%'))\n",
+    "dataset_text = widgets.Text(value='', description='Dataset:', placeholder='(auto-detect)', layout=widgets.Layout(width='25%'))\n",
     "viz_btn = widgets.Button(description='Visualize Last Frame', button_style='warning')\n",
     "\n",
     "# Visualization output\n",
@@ -675,11 +564,7 @@
     "        set_main_status(f\"Multiple files selected, visualizing first h5 file: {file_key}\")\n",
     "    \n",
     "    bucket = buckets_dropdown.value\n",
-    "    dataset_name = dataset_text.value.strip()\n",
-    "    \n",
-    "    if not dataset_name:\n",
-    "        set_main_status(\"Please specify dataset name (e.g. narrowfov)\", error=True)\n",
-    "        return\n",
+    "    dataset_name = dataset_text.value.strip() or None\n",
     "    \n",
     "    set_main_status(f\"Loading {file_key} from S3...\")\n",
     "    viz_output.clear_output()\n",
@@ -748,85 +633,7 @@
    "execution_count": null,
    "id": "d9a11ad9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== H5 Frame Browser ===\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf671c3a5d2e4f20ba12086414ce6eec",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Button(button_style='primary', description='Load Selected H5 File', icon='download', style=Butt…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0b65b38d75f4f4abe41fbc92864681f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(border_bottom='1px solid gray', border_left='1px solid gray', border_right='1px solid gra…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d362006d8432456182fb784090ce4573",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntSlider(value=0, continuous_update=False, description='Frame:', disabled=True, layout=Layout(…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ae0e37351ac4a6bbb8a61c19aa446d3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Button(description='First', disabled=True, icon='fast-backward', style=ButtonStyle()), Button(d…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1cd87a4abffb4c8e8719a0efe39b0417",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Cell 5: Frame Browser - Browse individual frames with slider\n",
     "import ipywidgets as widgets\n",
@@ -922,11 +729,7 @@
     "    \n",
     "    # Get bucket and dataset\n",
     "    current_bucket = buckets_dropdown.value\n",
-    "    current_dataset = dataset_text.value.strip()\n",
-    "    \n",
-    "    if not current_dataset:\n",
-    "        set_browser_status(\"Please specify dataset name in Cell 4 (e.g. narrowfov)\", error=True)\n",
-    "        return False\n",
+    "    current_dataset = dataset_text.value.strip() or None\n",
     "    \n",
     "    current_file_key = file_key\n",
     "    \n",
@@ -946,8 +749,15 @@
     "            import hdf5plugin\n",
     "            \n",
     "            with h5py.File(f, 'r') as hf:\n",
-    "                if current_dataset not in hf:\n",
-    "                    available = list(hf.keys())\n",
+    "                available = list(hf.keys())\n",
+    "                \n",
+    "                if current_dataset is None or current_dataset == '':\n",
+    "                    if not available:\n",
+    "                        set_browser_status(\"No datasets found in h5 file\", error=True)\n",
+    "                        return False\n",
+    "                    current_dataset = available[0]\n",
+    "                    print(f\"Auto-selected dataset: {current_dataset}\")\n",
+    "                elif current_dataset not in hf:\n",
     "                    set_browser_status(f\"Dataset '{current_dataset}' not found. Available: {available}\", error=True)\n",
     "                    return False\n",
     "                \n",
@@ -1156,118 +966,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "50fdde22",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== Advanced Frame Processing (MATLAB Style) ===\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84b819507ffa4193a88638db750b5a8b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntText(value=100, description='Start Frame:', layout=Layout(width='200px')), IntText(value=200…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9e9a98d433b4749960e8958500d0d59",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatText(value=4.0, description='Gaussian σ:', layout=Layout(width='200px')), Dropdown(descrip…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2aeac62cefc64e06ae39cddb61821d12",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Text(value='./processed_frames', description='Save Dir:', layout=Layout(width='400px')),))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7966caaa94544d948c73704e7c132ed3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Button(button_style='info', description='Preview Last Frame', icon='eye', style=ButtonStyle()),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67e15b55e95649d0bd74fed33e96a89e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='Progress:', layout=Layout(width='50%')),))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d5c615eab9641c5aa15fdc56023ee6d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(border_bottom='1px solid gray', border_left='1px solid gray', border_right='1px solid gra…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b94ca3c42db45cba9635b81f064954c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Cell 6: Advanced Frame Processing - MATLAB Style Pipeline (Bug Fixed)\n",
+    "# Cell 6: Advanced Frame Processing - MATLAB Style Pipeline (Bug Fixed + Auto Dataset Detection)\n",
     "# Pipeline: Normalize -> Flat Field -> Percentile Stretch -> Gaussian Filter\n",
     "\n",
     "import ipywidgets as widgets\n",
@@ -1379,11 +1083,7 @@
     "        return False\n",
     "    \n",
     "    bucket = buckets_dropdown.value\n",
-    "    dataset = dataset_text.value.strip()\n",
-    "    \n",
-    "    if not dataset:\n",
-    "        set_process_status(\"Please specify dataset name in Cell 4 (e.g. narrowfov)\", error=True)\n",
-    "        return False\n",
+    "    dataset = dataset_text.value.strip() or None\n",
     "    \n",
     "    # NEW: Create file identifier and check if file changed\n",
     "    new_file_id = f\"{bucket}/{file_key}/{dataset}\"\n",
@@ -1396,10 +1096,28 @@
     "    # Update global state\n",
     "    process_file_key = file_key\n",
     "    process_bucket = bucket\n",
-    "    process_dataset = dataset\n",
+    "    process_dataset = dataset  # Can be None, will be auto-detected later\n",
     "    current_file_id = new_file_id\n",
     "    \n",
     "    return True\n",
+    "\n",
+    "def auto_detect_dataset(hf, requested_dataset):\n",
+    "    \"\"\"Auto-detect dataset if not specified\"\"\"\n",
+    "    global process_dataset\n",
+    "    \n",
+    "    available = list(hf.keys())\n",
+    "    \n",
+    "    if requested_dataset is None or requested_dataset == '':\n",
+    "        if not available:\n",
+    "            raise KeyError(\"No datasets found in h5 file\")\n",
+    "        detected = available[0]\n",
+    "        print(f\"Auto-selected dataset: {detected}\")\n",
+    "        process_dataset = detected  # Update global\n",
+    "        return detected\n",
+    "    elif requested_dataset not in hf:\n",
+    "        raise KeyError(f\"Dataset '{requested_dataset}' not found. Available: {available}\")\n",
+    "    else:\n",
+    "        return requested_dataset\n",
     "\n",
     "def compute_flat_field(start_idx):\n",
     "    \"\"\"Compute flat field from 20 frames before start_idx\"\"\"\n",
@@ -1422,11 +1140,14 @@
     "        \n",
     "        with s3_fs.open(f\"{process_bucket}/{process_file_key}\", 'rb') as f:\n",
     "            with h5py.File(f, 'r') as hf:\n",
-    "                dataset = hf[process_dataset]\n",
+    "                # Auto-detect dataset if needed\n",
+    "                dataset_name = auto_detect_dataset(hf, process_dataset)\n",
+    "                \n",
+    "                dataset = hf[dataset_name]\n",
     "                frames = dataset[start_idx-20:start_idx]\n",
     "                flat = np.mean(frames, axis=0)\n",
     "        \n",
-    "        set_process_status(f\"✅ Flat field computed from 20 frames\")\n",
+    "        set_process_status(f\"✅ Flat field computed from 20 frames (dataset: {process_dataset})\")\n",
     "        return flat\n",
     "        \n",
     "    except Exception as e:\n",
@@ -1517,7 +1238,10 @@
     "        \n",
     "        with s3_fs.open(f\"{process_bucket}/{process_file_key}\", 'rb') as f:\n",
     "            with h5py.File(f, 'r') as hf:\n",
-    "                dataset = hf[process_dataset]\n",
+    "                # ⭐ 关键修复：即使使用缓存的 flat_field，也要检测 dataset\n",
+    "                dataset_name = auto_detect_dataset(hf, process_dataset)\n",
+    "                \n",
+    "                dataset = hf[dataset_name]\n",
     "                frame_raw = dataset[end_idx]\n",
     "        \n",
     "        # Get processing parameters\n",
@@ -1659,7 +1383,10 @@
     "        \n",
     "        with s3_fs.open(f\"{process_bucket}/{process_file_key}\", 'rb') as f:\n",
     "            with h5py.File(f, 'r') as hf:\n",
-    "                dataset = hf[process_dataset]\n",
+    "                # ⭐ 关键修复：确保 dataset 已检测\n",
+    "                dataset_name = auto_detect_dataset(hf, process_dataset)\n",
+    "                \n",
+    "                dataset = hf[dataset_name]\n",
     "                \n",
     "                for i, frame_idx in enumerate(frame_indices):\n",
     "                    try:\n",
@@ -1723,6 +1450,14 @@
     "\n",
     "set_process_status(\"Set parameters and click 'Preview Last Frame' to start\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0f81a52",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
